RESOLVED FIXED47193
[chromium] 51304 GPU compositor resorts to "slow" text rendering for base page layer
https://bugs.webkit.org/show_bug.cgi?id=47193
Summary [chromium] 51304 GPU compositor resorts to "slow" text rendering for base pag...
Vincent Scheib
Reported 2010-10-05 10:28:34 PDT
[chromium] 51304 GPU compositor resorts to "slow" text rendering for base page layer
Attachments
Patch (2.59 KB, patch)
2010-10-05 10:34 PDT, Vincent Scheib
no flags
Patch (2.70 KB, patch)
2010-10-05 11:38 PDT, Vincent Scheib
no flags
Vincent Scheib
Comment 1 2010-10-05 10:34:31 PDT
Vangelis Kokkevis
Comment 2 2010-10-05 11:12:50 PDT
Comment on attachment 69806 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=69806&action=review I think an inline comment about blending would help us remember why it's done the way it is. Otherwise looks good! > WebCore/platform/graphics/chromium/LayerRendererChromium.cpp:206 > + GLC(m_context, m_context->disable(GraphicsContext3D::BLEND)); Can you please add a comment here saying that we need to render the root layer without blending to get subpixel antialised text displaying correctly? That way we won't forget why we need to flip blending on and off.
Vincent Scheib
Comment 3 2010-10-05 11:38:58 PDT
Kenneth Russell
Comment 4 2010-10-05 12:25:21 PDT
Comment on attachment 69818 [details] Patch Looks fine to me; confirmed with Vincent offline that CSS 3D tests with translucent layers continue to render correctly.
WebKit Commit Bot
Comment 5 2010-10-05 13:59:28 PDT
Comment on attachment 69818 [details] Patch Clearing flags on attachment: 69818 Committed r69144: <http://trac.webkit.org/changeset/69144>
WebKit Commit Bot
Comment 6 2010-10-05 13:59:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.