2010-10-05  Vincent Scheib  <scheib@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] 51304 GPU compositor resorts to "slow" text rendering for base page layer
        https://bugs.webkit.org/show_bug.cgi?id=47193

        Test: Accelerated compositor test infrastructure still coming online. Tested manually.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::setRootLayerCanvasSize):
        (WebCore::LayerRendererChromium::prepareToDrawLayers):
        (WebCore::LayerRendererChromium::drawLayers):

Canonical link: https://commits.webkit.org/59751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69144 268f45cc-cd09-0410-ab3c-d52691b4dbfc